--- a/css/medias.css
+++ b/css/medias.css
@@ -1,14 +1,15 @@
-@font-face {
-  font-family: 'Peace' ;
-  src: url('Peace and love.ttf') format(truetype);
-  font-weight: normal;
-  font-style: normal;
-}
 
 
 
 /* Small devices (portrait tablets and large phones, 300px and up) */
 @media only screen and (min-width: 300px) {
+  @font-face {
+    font-family: 'Peace' ;
+    src: url('../Peace and love.ttf') format(truetype);
+    font-weight: normal;
+    font-style: normal;
+  }
+  
 
   body {
     background-color: rgb(4, 4, 150);
@@ -19,7 +20,8 @@
     padding: 0;
     min-height:98vh;
     margin: 0;
-    color: aliceblue;    
+    color: aliceblue;   
+    font-family: 'Peace';  
 }
 
 .logo {
@@ -78,6 +80,13 @@ vertical-align: middle; /* alinhamento vertical da imagem */
 
   /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  @font-face {
+    font-family: 'Peace' ;
+    src: url('../Peace and love.ttf') format(truetype);
+    font-weight: normal;
+    font-style: normal;
+  }
+  
   body {
     background-color: rgb(4, 4, 150);
     background-image: url(../img/gradient_2.jpg);
@@ -87,7 +96,8 @@ vertical-align: middle; /* alinhamento vertical da imagem */
     padding: 2%;
     min-height:100vh;
     margin: 0;
-    color: aliceblue;    
+    color: aliceblue;  
+    font-family: 'Peace';   
 }
 
 .logo {
@@ -127,7 +137,7 @@ font-weight: bold;
 text-decoration: none;
 cursor: pointer;
 border-radius: 15px;
-width: 220px; /* largura do botão */
+width: 250px; /* largura do botão */
 margin-top: 0;
 margin-right: 20px;
 margin-bottom: 4px;
@@ -147,6 +157,13 @@ vertical-align: middle; /* alinhamento vertical da imagem */
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
 
+  @font-face {
+    font-family: 'Peace' ;
+    src: url('../Peace and love.ttf') format(truetype);
+    font-weight: normal;
+    font-style: normal;
+  }
+  
   
   body {
     background-color: rgb(4, 4, 150);
@@ -157,7 +174,8 @@ vertical-align: middle; /* alinhamento vertical da imagem */
     padding: 0;
     min-height: 88vh;
     margin-top: 10px;
-    color: aliceblue;    
+    color: aliceblue; 
+    font-family: 'Peace';   
 }
 
 
