--- a/css/admin.css
+++ b/css/admin.css
@@ -13,8 +13,8 @@
         min-height: 100vh;
         color: white;
         text-align: center;
-        margin: 0;
         font-family: 'Peace';
+        font-size: 10px;
 
     }
 
@@ -55,7 +55,7 @@
         width: 160px;
         text-align: center;
         font-family: 'Peace';
-        border-radius: 10px;
+        border-radius: 5px;
     }
 
     .respostas {
@@ -92,7 +92,6 @@
 
     .sessao {
         align-content: center;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         text-align: center;
         margin-top: 10px;
         margin-bottom: 10px;
@@ -144,6 +143,39 @@
         text-align: center;
         margin-top: 10%;
         font-size: 20px;
+    }
+
+    .erro {
+        text-align: center;
+        margin-top: 10%;
+        font-size: 20px;
+    }
+
+    .divtb{
+        text-align: center;
+        align-content: center;
+    }
+
+    .tb_detalhes {
+        border: 1px solid black;
+        border-collapse: collapse;
+
+        th{
+            background-color: black;
+            height: 60px;
+          
+        }
+        .num{
+            background-color: gray;
+            width: 20px;
+           
+        }
+        .nome{
+            background-color: gray;
+            width: 100px;
+            
+        }
+       
     }
 }
 
@@ -206,7 +238,7 @@
         width: 180px;
         text-align: center;
         font-family: 'Peace';
-        border-radius: 10px;
+        border-radius: 5px;
     }
 
     .respostas {
@@ -300,6 +332,35 @@
         margin-top: 10%;
         font-size: 20px;
     }
+
+    .erro {
+        text-align: center;
+        margin-top: 10%;
+        font-size: 20px;
+    }
+
+    .tb_detalhes {
+        border: 1px solid black;
+        border-collapse: collapse;
+
+        th{
+            background-color: black;
+            height: 60px;
+          
+        }
+        .num{
+            background-color: gray;
+            width: 20px;
+           
+        }
+        .nome{
+            background-color: gray;
+            width: 150px;
+            
+        }
+       
+    }
+
 }
 
 @media only screen and (min-width: 1200px) {
@@ -319,7 +380,7 @@
         text-align: center;
         margin: 0;
         font-family: 'Peace';
-
+ 
     }
 
     .divi-img {
@@ -364,7 +425,7 @@
         width: 180px;
         text-align: center;
         font-family: 'Peace';
-        border-radius: 10px;
+        border-radius: 5px;
     }
 
     .botaoadmin {
