--- a/css/admin.css
+++ b/css/admin.css
@@ -509,25 +509,31 @@
         border: 1px solid black;
         border-collapse: collapse;
 
+        
+    
         th {
             background-color: black;
             height: 60px;
-
+            border-collapse: collapse;
         }
 
         .num {
-            background-color: gray;
+            color: black;
+            background-color: rgb(255, 255, 255);
             width: 20px;
-
+            border-collapse: collapse;
+            border-bottom: 1px solid black;
+           
         }
 
         .nome {
-            background-color: gray;
+            color: black;
+            background-color: rgb(255, 255, 255);
             width: 150px;
-
+            border-collapse: collapse;
+            border-bottom: 1px solid black;
         }
 
     }
-
-
+   
 }
