--- a/css/admin.css
+++ b/css/admin.css
@@ -425,6 +425,17 @@
         border-radius: 5px;
     }
 
+    .respostasverd {
+        width: 180px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        text-align: center;
+        margin-bottom: 3px;
+        background-color: rgb(0, 255, 0);
+        color: rgb(0, 0, 0);
+        border-radius: 5px;
+    }
+
     .select {
         width: 180px;
         text-align: center;
