--- a/css/admin.css
+++ b/css/admin.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 300px) and (max-width: 769px){
+@media only screen and (min-width: 300px){
     @font-face {
         font-family: 'Peace';
         src: url('../Peace and love.ttf') format(truetype);
@@ -15,6 +15,7 @@
         text-align: center;
         font-family: 'Peace';
         font-size: 10px;
+        border: 0;
 
     }
 
@@ -184,24 +185,29 @@
     .tb_detalhes {
         border: 1px solid black;
         border-collapse: collapse;
+        font-size: 8px;
+        
+        
 
         th {
             background-color: black;
-            height: 60px;
+            height: 40px;
 
         }
 
         .num {
             color: black;
             background-color: rgb(255, 255, 255);
-            width: 20px;
+            width: 5px;
+            text-align: center;
 
         }
 
         .nome {
             color: black;
             background-color: rgb(255, 255, 255);
-            width: 100px;
+            width: 80px;
+            text-align: center;
 
         }
 
